# headmodel-conversion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
src/headmodel_conversion/: __init__.py  cli.py  densities.py  sheets.py  surfaces.py
src/headmodel_conversion/mesher/: __init__.py  bindings.cpp
tests/: test_boundary_facets.py  test_repair_solids.py  test_sheets.py
